SFDCProject/src/objects/FS_Dispatch__c.object
<CustomObject>
    <description>Captures information about each instance of a Field Service Dispatch - when a resource is sent to an on-site visit</description>
    <fields>
        <fullName>Asset_Status__c</fullName>
        <description>As a user, when I open a  FS Dispatch record, then I can see the Asset Status value from the Service Contract</description>
        <formula>Text(FS_Service_Contract__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To__c</fullName>
        <label>Bill To</label>
        <picklist>
            <controllingField>FS_Financial_Resp__c</controllingField>
            <picklistValues>
                <fullName>Not Billable to Third Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Owner / Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prior Service Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <picklist>
            <controllingField>FS_Dispatch_State__c</controllingField>
            <picklistValues>
                <fullName>Customer/site not ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer non-responsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate/related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue resolved itself</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redirected work to another partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Priority__c</fullName>
        <formula>text(FS_Parent_Case__r.Priority)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Reason__c</fullName>
        <formula>text(FS_Parent_Case__r.Reason )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Close Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <formula>FS_Service_Contract__r.ContactId</formula>
        <label>Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <formula>FS_Service_Contract__r.County__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_Email__c</fullName>
        <label>Customer Contact: Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <formula>IF( NULLVALUE( FS_Service_Contract__r.Contact.Email , &quot;&quot;) = &quot;&quot; , &quot;N/A&quot;, FS_Service_Contract__r.Contact.Email )</formula>
        <label>Customer Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Last_Name__c</fullName>
        <formula>FS_Service_Contract__r.Contact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Phone__c</fullName>
        <formula>IF( NULLVALUE(FS_Service_Contract__r.Contact.Phone, &quot;&quot;) = &quot;&quot; , &quot;N/A&quot;, FS_Service_Contract__r.Contact.Phone)</formula>
        <label>Customer Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Since_Dispatch__c</fullName>
        <formula>IF( ISBLANK(FS_Time_Submitted__c), NOW() - FS_Time_Dispatched__c, FS_Time_Submitted__c - FS_Time_Dispatched__c)</formula>
        <label>Time to Resolve</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_Not_Send_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Send Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Don_t_send_dispatch_email_to_customer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this field is checked, system will NOT send a dispatch email to customer.</inlineHelpText>
        <label>Don&apos;t send dispatch email to customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_Accept_Dispatch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to accept the FS Dispatch.  This will update the FS Dispatch State, the timestamp for Dispatch Accepted, and send out a notification email to the Dispatched By</description>
        <inlineHelpText>Check this box to accept the FS Dispatch</inlineHelpText>
        <label>Accept Dispatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_Access_Info__c</fullName>
        <description>Information helpful for the field resource to get access to the system during the on-site field visit.</description>
        <inlineHelpText>Enter any additional information helpful for the field resource to get access to the system during the on-site field visit.</inlineHelpText>
        <label>Access Info</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FS_Address__c</fullName>
        <description>Home Address from the Service Contract</description>
        <formula>FS_Service_Contract__r.Home_Address__c</formula>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Approve_Findings__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to Approve the Findings</description>
        <inlineHelpText>Check to Approve the Findings</inlineHelpText>
        <label>Approve Findings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_Case_Reason_Subreason__c</fullName>
        <formula>&quot;Reason: &quot;&amp; text(FS_Parent_Case__r.Reason ) &amp; &quot;;     Subreason: &quot; &amp; text( FS_Parent_Case__r.Subset_Reasons__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Reason Subreason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_City__c</fullName>
        <description>City of the Generation Asset</description>
        <formula>FS_Service_Contract__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Customer_Name__c</fullName>
        <description>First and last name of the Case Contact</description>
        <formula>TRIM(  FS_Service_Contract__r.Contact.FirstName  &amp; &quot; &quot; &amp; FS_Service_Contract__r.Contact.LastName )</formula>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Customer_Phone_Email__c</fullName>
        <description>Phone and Email of the Case Contact</description>
        <formula>&quot;Phone: &quot; &amp;  IF( NULLVALUE(FS_Service_Contract__r.Contact.Phone, &quot;&quot;) = &quot;&quot;  , &quot;N/A&quot;, FS_Service_Contract__r.Contact.Phone) &amp; &quot;   Email: &quot; &amp; IF( NULLVALUE( FS_Service_Contract__r.Contact.Email , &quot;&quot;) = &quot;&quot;  , &quot;N/A&quot;, FS_Service_Contract__r.Contact.Email )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Phone Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Decline_Dispatch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to Decline the FS Dispatch.  The FS Dispatch State will be updated, the FS Time Declined will be updated, and a notification email will be sent to Dispatched By</description>
        <inlineHelpText>Check this box to Decline the FS Dispatch</inlineHelpText>
        <label>Decline Dispatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_Dispatch_Constraint__c</fullName>
        <description>The constraints and SLA combination imposed on this FS Dispatch</description>
        <inlineHelpText>Select the constraints and SLA combination imposed on this FS Dispatch</inlineHelpText>
        <label>FS Dispatch Constraint</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Discover and Resolve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discover, Resolve if No Parts Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolve</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FS_Dispatch_Findings__c</fullName>
        <description>Findings provided by the Field Service Partner as a result of this on-site field visit.


Renamed as per [SFDC-400] - 2012.08.08</description>
        <inlineHelpText>Enter the findings provided by the Field Service Partner as a result of this on-site field visit.</inlineHelpText>
        <label>Final Findings</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FS_Dispatch_ID__c</fullName>
        <description>Autogenerated ID number for the FS Dispatch</description>
        <displayFormat>FSD{000000000}</displayFormat>
        <label>FS Dispatch ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>FS_Dispatch_Instructions__c</fullName>
        <description>Instructions for the field resource on what to do during the field on-site visit.</description>
        <inlineHelpText>Enter instructions for the field resource on what to do during the field on-site visit.</inlineHelpText>
        <label>Dispatch Instructions</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FS_Dispatch_Number__c</fullName>
        <description>Automatically generated number for Field Service Dispatch records</description>
        <displayFormat>{0}</displayFormat>
        <label>FS Dispatch Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>FS_Dispatch_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Service Partner selected for this FS Dispatch</description>
        <inlineHelpText>Select the Service Partner who you want to receive this FS Dispatch</inlineHelpText>
        <label>FS Dispatch Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FS Dispatches</relationshipLabel>
        <relationshipName>FS_Dispatches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FS_Dispatch_Phase__c</fullName>
        <description>The current Phase of the FS Ticket for this FS Dispatch.</description>
        <inlineHelpText>Select the current Phase of the FS Ticket for this FS Dispatch.</inlineHelpText>
        <label>Dispatch Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Discover</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Resolve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discover and Resolve</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FS_Dispatch_Result__c</fullName>
        <description>Identifies the results of the dispatch</description>
        <inlineHelpText>Select Resolved or Unresolved to describe the results of the dispatch</inlineHelpText>
        <label>Dispatch Result</label>
        <picklist>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unresolved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FS_Dispatch_State__c</fullName>
        <description>The current state of the FS Dispatch</description>
        <inlineHelpText>Select the current state of the FS Dispatch</inlineHelpText>
        <label>Dispatch State</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Dispatched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispatch Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispatch Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispatch Findings Reported</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispatch Findings Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispatch Findings Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispatch Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FS_Dispatch_To_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this check box is checked, activated workflow to change the Dispatch State and send email notification to the partner.</description>
        <inlineHelpText>Check here to update the FS Dispatch State and send the dispatch notification email to the service partner.</inlineHelpText>
        <label>Dispatch To Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_Dispatch_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contact from the relationship partner that is being dispatched for the on-site visit.</description>
        <inlineHelpText>Select the contact from the relationship partner that is being dispatched for the on-site visit.</inlineHelpText>
        <label>Dispatch To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Contact_Role__c</field>
                <operation>equals</operation>
                <value>FS Point of Contact</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>FS Dispatches</relationshipLabel>
        <relationshipName>FS_Dispatches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FS_Dispatched_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who created this FS Dispatch record</description>
        <inlineHelpText>Select the user who created this dispatch record</inlineHelpText>
        <label>Dispatched By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FS_Dispatches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FS_Financial_Resp__c</fullName>
        <description>Party who is financially responsible for this FS Ticket</description>
        <inlineHelpText>Select the party who will be financially responsible for this FS Ticket</inlineHelpText>
        <label>Financial Resp</label>
        <picklist>
            <picklistValues>
                <fullName>Sunrun</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FS_First_Submit_Time__c</fullName>
        <description>Date and time when the Dispatch Findings were first submitted.</description>
        <inlineHelpText>Enter the date and time when the Dispatch Findings were first submitted.</inlineHelpText>
        <label>First Submit Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FS_Gen_Asset_State__c</fullName>
        <formula>FS_Service_Contract__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Generation_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Generation Asset for this DS Dispatch</description>
        <inlineHelpText>Select the Generation Asset for this DS Dispatch.  Will inherit from the case if blank.</inlineHelpText>
        <label>Generation Asset</label>
        <referenceTo>Generation_Assets__c</referenceTo>
        <relationshipLabel>FS Dispatches</relationshipLabel>
        <relationshipName>FS_Dispatches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FS_Parent_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent case for the FS Dispatch</description>
        <label>Parent Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>FS Dispatches</relationshipLabel>
        <relationshipName>FS_Dispatches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FS_Partner_Tracking_ID__c</fullName>
        <description>External ID used by the partner for tracking their FS Dispatches</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter the tracking ID that is being used by the Dispatch Partner in their system.</inlineHelpText>
        <label>Partner Tracking ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Reject_Findings__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to Reject the Findings</description>
        <inlineHelpText>Check to Reject the Findings</inlineHelpText>
        <label>Reject Findings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_Reject_Reason__c</fullName>
        <description>Enter the reason for rejecting the findings and what the partner should do to correct it.</description>
        <inlineHelpText>Enter the reason for rejecting the findings and what the partner should do to correct it.</inlineHelpText>
        <label>Reject Reason</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FS_Selected_Partner_Name__c</fullName>
        <description>The name of the Dispatch Partner Account selected</description>
        <label>Selected Partner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Service_Contract_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract Event</label>
        <referenceTo>Service_Contract_Event__c</referenceTo>
        <relationshipLabel>FS Dispatches</relationshipLabel>
        <relationshipName>FS_Dispatches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FS_Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>FS Dispatches</relationshipLabel>
        <relationshipName>FS_Dispatches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FS_Submit_Findings__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to Submit the Findings.  This will update the FS Dispatch State to Findings Submitted and update the FS Time Submitted time stamp and send email notification that the findings were submitted.</description>
        <inlineHelpText>Check this box to Submit the Findings.</inlineHelpText>
        <label>Submit Findings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_Time_Accepted__c</fullName>
        <description>Time and date stamp for the latest transition of this FS Dispatch State to &quot;Dispatch Accepted&quot;</description>
        <inlineHelpText>Enter the time and date for the latest transition of this FS Dispatch State to &quot;Dispatch  Accepted&quot;</inlineHelpText>
        <label>Time Accepted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FS_Time_Approved__c</fullName>
        <description>The latest date and time when the Dispatch Findings were Approved.</description>
        <inlineHelpText>Enter the date and time when the Dispatch Findings were Approved.</inlineHelpText>
        <label>Time Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FS_Time_Declined__c</fullName>
        <description>Time and date stamp for the latest transition of this FS Dispatch State to &quot;Dispatch Decliner&quot;</description>
        <inlineHelpText>Enter the time and date for the latest transition of this FS Dispatch State to &quot;Dispatch Declined&quot;</inlineHelpText>
        <label>Time Declined</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FS_Time_Dispatched__c</fullName>
        <description>Time and date stamp for the latest transition of this FS Dispatch State to &quot;Dispatched&quot;</description>
        <inlineHelpText>Enter the time and date for the latest transition of this FS Dispatch State to &quot;Dispatched&quot;</inlineHelpText>
        <label>Time Dispatched</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FS_Time_Rejected__c</fullName>
        <description>Latest date and time when the Findings were Rejected</description>
        <inlineHelpText>Enter the date and time when the Findings were Rejected.</inlineHelpText>
        <label>Time Rejected</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FS_Time_Sked_Onsite__c</fullName>
        <description>The date and time requested for the on-site visit.</description>
        <inlineHelpText>Enter the date and time when you want the field visit to occur.</inlineHelpText>
        <label>FS Time Req Onsite</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FS_Time_Submitted__c</fullName>
        <description>Time and date stamp for the latest transition of this FS Dispatch State to &quot;Dispatch Findings Submitted&quot;</description>
        <inlineHelpText>Enter the time and date for the latest transition of this FS Dispatch State to &quot;Dispatch Findings Submitted&quot;</inlineHelpText>
        <label>Time Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Follow_up_Notes__c</fullName>
        <label>Sunrun Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Initial_Appointment_Date__c</fullName>
        <label>Initial Appointment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Branch__c</fullName>
        <formula>FS_Service_Contract__r.Install_Branch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Partner__c</fullName>
        <formula>FS_Service_Contract__r.Install_Partner_Id__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Serial_Num__c</fullName>
        <formula>IF( NULLVALUE(  FS_Parent_Case__r.Meter_Serial_Number__c  , &quot;&quot;) = &quot;&quot; , &quot;N/A&quot;,  FS_Parent_Case__r.Meter_Serial_Number__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meter Serial Num</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <formula>FS_Service_Contract__r.Contact.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Id__c</fullName>
        <formula>if(FS_Dispatch_To__r.Ultimate_Parent_Account__c != null, FS_Dispatch_To__r.Ultimate_Parent_Account__c, FS_Dispatch_To__r.AccountId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Purchase_Thru_Location__c</fullName>
        <formula>FS_Service_Contract__r.Opportunity__r.Costco_Purchase_Thru_Warehouse__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retail Purchase Thru Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Contract_Id__c</fullName>
        <formula>FS_Service_Contract__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Contract Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Update__c</fullName>
        <description>Field for Partners to input their status updates in the partner portal</description>
        <label>Status Update</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subreason__c</fullName>
        <formula>text( FS_Parent_Case__r.Subset_Reasons__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subreason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>FS Dispatch</label>
    <listViews>
        <fullName>ACTIVE</fullName>
        <columns>FS_Customer_Name__c</columns>
        <columns>FS_City__c</columns>
        <columns>FS_Gen_Asset_State__c</columns>
        <columns>Case_Reason__c</columns>
        <columns>Subreason__c</columns>
        <columns>FS_Selected_Partner_Name__c</columns>
        <columns>Case_Priority__c</columns>
        <columns>NAME</columns>
        <columns>FS_Partner_Tracking_ID__c</columns>
        <columns>FS_Dispatch_State__c</columns>
        <columns>FS_Time_Dispatched__c</columns>
        <columns>FS_Time_Submitted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FS_Dispatch_State__c</field>
            <operation>equals</operation>
            <value>Dispatch Accepted,Dispatch Findings Rejected</value>
        </filters>
        <label>ACTIVE</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ACTIVE_MA</fullName>
        <columns>FS_Customer_Name__c</columns>
        <columns>FS_City__c</columns>
        <columns>FS_Gen_Asset_State__c</columns>
        <columns>Case_Reason__c</columns>
        <columns>Subreason__c</columns>
        <columns>FS_Selected_Partner_Name__c</columns>
        <columns>Case_Priority__c</columns>
        <columns>NAME</columns>
        <columns>FS_Partner_Tracking_ID__c</columns>
        <columns>FS_Dispatch_State__c</columns>
        <columns>FS_Time_Dispatched__c</columns>
        <columns>FS_Time_Submitted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FS_Dispatch_State__c</field>
            <operation>equals</operation>
            <value>Dispatch Accepted,Dispatch Findings Rejected</value>
        </filters>
        <filters>
            <field>FS_Gen_Asset_State__c</field>
            <operation>equals</operation>
            <value>MA</value>
        </filters>
        <label>ACTIVE (MA)</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <portalRoleAndSubordinates>RoofDiagnosticsIncPartnerUser</portalRoleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ACTIVE_NJ</fullName>
        <columns>FS_Customer_Name__c</columns>
        <columns>FS_City__c</columns>
        <columns>FS_Gen_Asset_State__c</columns>
        <columns>Case_Reason__c</columns>
        <columns>Subreason__c</columns>
        <columns>FS_Selected_Partner_Name__c</columns>
        <columns>Case_Priority__c</columns>
        <columns>NAME</columns>
        <columns>FS_Partner_Tracking_ID__c</columns>
        <columns>FS_Dispatch_State__c</columns>
        <columns>FS_Time_Dispatched__c</columns>
        <columns>FS_Time_Submitted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FS_Dispatch_State__c</field>
            <operation>equals</operation>
            <value>Dispatch Accepted,Dispatch Findings Rejected</value>
        </filters>
        <filters>
            <field>FS_Gen_Asset_State__c</field>
            <operation>equals</operation>
            <value>NJ</value>
        </filters>
        <label>ACTIVE (NJ)</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <portalRoleAndSubordinates>RoofDiagnosticsIncPartnerUser</portalRoleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ACTIVE_NY</fullName>
        <columns>FS_Customer_Name__c</columns>
        <columns>FS_City__c</columns>
        <columns>FS_Gen_Asset_State__c</columns>
        <columns>Case_Reason__c</columns>
        <columns>Subreason__c</columns>
        <columns>FS_Selected_Partner_Name__c</columns>
        <columns>Case_Priority__c</columns>
        <columns>NAME</columns>
        <columns>FS_Partner_Tracking_ID__c</columns>
        <columns>FS_Dispatch_State__c</columns>
        <columns>FS_Time_Dispatched__c</columns>
        <columns>FS_Time_Submitted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FS_Dispatch_State__c</field>
            <operation>equals</operation>
            <value>Dispatch Accepted,Dispatch Findings Rejected</value>
        </filters>
        <filters>
            <field>FS_Gen_Asset_State__c</field>
            <operation>equals</operation>
            <value>NY</value>
        </filters>
        <label>ACTIVE (NY)</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <portalRoleAndSubordinates>RoofDiagnosticsIncPartnerUser</portalRoleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ACTIVE_NY_Hudson_Valley</fullName>
        <columns>FS_Customer_Name__c</columns>
        <columns>FS_City__c</columns>
        <columns>FS_Gen_Asset_State__c</columns>
        <columns>Case_Reason__c</columns>
        <columns>Subreason__c</columns>
        <columns>FS_Selected_Partner_Name__c</columns>
        <columns>Case_Priority__c</columns>
        <columns>NAME</columns>
        <columns>FS_Partner_Tracking_ID__c</columns>
        <columns>FS_Dispatch_State__c</columns>
        <columns>FS_Time_Dispatched__c</columns>
        <columns>FS_Time_Submitted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FS_Dispatch_State__c</field>
            <operation>equals</operation>
            <value>Dispatch Accepted,Dispatch Findings Rejected</value>
        </filters>
        <filters>
            <field>FS_Gen_Asset_State__c</field>
            <operation>equals</operation>
            <value>NY</value>
        </filters>
        <filters>
            <field>County__c</field>
            <operation>notEqual</operation>
            <value>Suffolk,Nassau,Queens,Kings,Richmond,New York,Bronx</value>
        </filters>
        <label>ACTIVE (NY-Hudson Valley)</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <portalRoleAndSubordinates>RoofDiagnosticsIncPartnerUser</portalRoleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ACTIVE_Panel_Cleaning</fullName>
        <columns>FS_Customer_Name__c</columns>
        <columns>FS_City__c</columns>
        <columns>FS_Gen_Asset_State__c</columns>
        <columns>Case_Reason__c</columns>
        <columns>Subreason__c</columns>
        <columns>FS_Selected_Partner_Name__c</columns>
        <columns>Case_Priority__c</columns>
        <columns>NAME</columns>
        <columns>FS_Partner_Tracking_ID__c</columns>
        <columns>FS_Dispatch_State__c</columns>
        <columns>FS_Time_Dispatched__c</columns>
        <columns>FS_Time_Submitted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FS_Dispatch_State__c</field>
            <operation>equals</operation>
            <value>Dispatch Accepted,Dispatch Findings Rejected</value>
        </filters>
        <filters>
            <field>Subreason__c</field>
            <operation>equals</operation>
            <value>Aesthetics</value>
        </filters>
        <label>ACTIVE(Panel Cleaning)</label>
        <language>en_US</language>
        <sharedTo>
            <portalRole>SolarMaidPartnerUser</portalRole>
        </sharedTo>
    </listViews>
</CustomObject>